add: コンテンツ追加

--- a/app/views/shared/_1.html.haml
+++ b/app/views/shared/_1.html.haml
@@ -1,2 +1,12 @@
-.oil
-  eats
+.fixed_global_header
+  .wallpaper_wrapper
+    .header_inner
+      oil
+
+  .global_header
+
+  .header_container
+
+  .wrapper
+
+  .rich_footer_wrapper
