--- a/app/assets/stylesheets/1.scss
+++ b/app/assets/stylesheets/1.scss
@@ -1,3 +1,10 @@
-.oil {
+.fixed_global_header {
   font-size: 30px;
+  .wallpaper_wrapper {
+    height: 82px;
+    .header_inner {
+      width: 970px;
+      margin: 0 auto;
+    }
+  }
 }
